# archOS-3

./: apps.py  archcrypter.py  calcolatrice.py  codice da scopiazzare.py  main.py  openwriter.py  orologio.py  pyproject.toml  sistema.py  stcolor.py  to-do
work in progress (likely abandoned projects)/: impostazioni.py  stcolor.py  to-do
