[tool.poetry]
name = "ArmadiOS 3"
version = "0.2.9"
description = "A cool operating system based on pure Python 3"
authors = ["Enrico Fracasso <fracaen@itisravenna.it>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
colored = "^1.4.3"
colorama = "^0.4.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"